--- a/index.html
+++ b/index.html
@@ -41,12 +41,11 @@
             <div class="about-container">
                 <div class="left-about">
                     <p>
-                        I am Efe Ballar, a 20 years old, third year Computer Science & Engineering student at Sabanci University. I also have an ongoing minor in Business Analytics. 
+                        I am Efe Ballar, a 21 years old, senior Computer Science & Engineering student at Sabanci University. I also have an ongoing minor in Business Analytics. 
                         <br>
                         <br>
                         I have taken some important courses, and within these courses, there were projects that I've been involved in, which helped me gain great amount of experience in the fields of Computer Science, 
-                        and I also observed that I am capable of managing and leading a team in addition to working well as a team member. 
-                        To increase my skills in relevant fields and gain hands-on experience, I would be very interested in internship possibilities. 
+                        to increase my skills in relevant fields and gain hands-on experience, I would be very interested in internship/part-time possibilities. 
                         I am eager to bring my set of skills to contribute to the fields of Computer Science & Engineering!
                         <br>
                         <br>
@@ -147,14 +146,29 @@
                     <div class="tl-icon">
                         <i class="fas fa-briefcase" style="color: white"></i>
                     </div>
-                    <p class="tl-duration">Oct 2023 - Jan 2024</p>
-                    <h5>Learning Assistant<span> - Sabanci University CS201 Course</span></h5>
+                    <p class="tl-duration">Jul 2024 - Present</p>
+                    <h5>Business Intelligence Engineer Intern<span> - Amazon</span></h5>
                     <p>
-                        Being interaction with freshman students by holding office hours and answering their questions regarding C++ assignments
+                        Developed automated data pipelines for the Finance team using ETL tools, enabling improved decision-making.
                         <br>
                         <br>
-                        Being a part of team that will help them understand the concepts of programming
-                        fundamentals better in the recitation hours
+                        Achieved 20% reduction in query execution times by optimizing crucial SQL queries for faster data retrieval.
+                        <br>
+                        <br>
+                        Automated financial dashboards and reports in Quicksight and Excel, reducing manual reporting time by 50%.
+                    </p>
+                </div>
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-briefcase" style="color: white"></i>
+                    </div>
+                    <p class="tl-duration">Oct 2023 - Jun 2024</p>
+                    <h5>Undergraduate Assistant<span> - Sabanci University</span></h5>
+                    <p>
+                        Assisted over 1000 students in IF100 & CS201 courses by holding office hours for assignments in Python/C++.
+                        <br>
+                        <br>
+                        Led two-hour weekly recitation sessions on programming fundamentals.
                     </p>
                 </div>
                 <div class="timeline-item">
@@ -175,18 +189,6 @@
                         <br>
                         Preliminary trend analysis and data visualisations of the past elections using Python, and Excel
                     </p>
-                </div>
-                <div class="timeline-item">
-                    <div class="tl-icon">
-                        <i class="fas fa-briefcase" style="color: white"></i>
-                    </div>
-                    <p class="tl-duration">Sep 2021 - Present</p>
-                    <h5>Vice President<span> - Sabanci University Chess Club</span></h5>
-                    <p>
-                        Popularizing chess in the university by helping club host events and tournaments
-                        <br>
-                        <br>
-                        Representing the university in intercollegiate chess tournaments                    </p>
                 </div>
                 <div class="timeline-item">
                     <div class="tl-icon">
