--- a/index.html
+++ b/index.html
@@ -37,110 +37,6 @@
     <main>
         <section class="section sec2 about" id="about">
             <div class="main-title"><h2>About <span>me</span></h2></div>
-            <h4 class="ami-title">Who am I ?</h4>
-            <div class="about-container">
-                <div class="left-about">
-                    <p>
-                        I am Efe Ballar, a 21 years old, senior Computer Science & Engineering student at Sabanci University. I also have an ongoing minor in Business Analytics. 
-                        <br>
-                        <br>
-                        I have taken some important courses, and within these courses, there were projects that I've been involved in, which helped me gain great amount of experience in the fields of Computer Science, 
-                        to increase my skills in relevant fields and gain hands-on experience, I would be very interested in internship/part-time possibilities. 
-                        I am eager to bring my set of skills to contribute to the fields of Computer Science & Engineering!
-                        <br>
-                        <br>
-                        You can find more information about me by getting my CV or checking out my skills!     
-        
-                    </p>
-                    <div class="btn-con">
-                        <a href ="EfeBallarCV.pdf" class="main-btn" target="_blank">
-                            <span class = "btn-text">Get my CV!</span>
-                            <span class = "btn-icon"><i class="fas fa-download" style="color: white"></i></span>
-                        </a>
-                    </div>
-                </div>
-                <div class="right-about"> 
-                    <div class="about-item">
-                        <div class="abt-text">
-                            <img src="img/skills/C++.png" alt="C++">
-                            <p class="small-text">C++</p>
-                        </div>
-                    </div>
-                    <div class="about-item">
-                        <div class="abt-text">
-                            <img src="img/skills/C_sharp.png" alt="Csharp">
-                            <p class="small-text">C#</p>
-                        </div>
-                    </div>
-                    <div class="about-item">
-                        <div class="abt-text">
-                            <img src="img/skills/Java.png" alt="Java">
-                            <p class="small-text" style="padding-top: 0.4rem">Java</p>
-                        </div>
-                    </div>
-                    <div class="about-item">
-                        <div class="abt-text">
-                            <img src="img/skills/Javascript.png" alt="Javascript">
-                            <p class="small-text">Javascript</p>
-                        </div>
-                    </div>
-                    <div class="about-item">
-                        <div class="abt-text">
-                            <img src="img/skills/Python.png" alt="Python">
-                            <p class="small-text">Python</p>
-                        </div>
-                    </div>
-                    <div class="about-item">
-                        <div class="abt-text">
-                            <img src="img/skills/r-icon.png" alt="R">
-                            <p class="small-text" style="padding-top: 0.7rem">R</p>
-                        </div>
-                    </div>
-                    <div class="about-item">
-                        <div class="abt-text">
-                            <img src="img/skills/HTML.png" alt="HTML">
-                            <p class="small-text">HTML</p>
-                        </div>
-                    </div>
-                    <div class="about-item">
-                        <div class="abt-text">
-                            <img src="img/skills/CSS.png" alt="CSS">
-                            <p class="small-text">CSS</p>
-                        </div>
-                    </div>
-                    <div class="about-item">
-                        <div class="abt-text">
-                            <img src="img/skills/Android.png" alt="Android">
-                            <p class="small-text" style="padding-top: 0.5rem">Android</p>
-                        </div>
-                    </div>
-                    <div class="about-item">
-                        <div class="abt-text">
-                            <img src="img/skills/mysql.png" alt="MySQL">
-                            <p class="small-text">MySQL</p>
-                        </div>
-                    </div>
-                    <div class="about-item">
-                        <div class="abt-text">
-                            <img src="img/skills/mongodb.png" alt="MongoDB">
-                            <p class="small-text">MongoDB</p>
-                        </div>
-                    </div>
-                    <div class="about-item">
-                        <div class="abt-text">
-                            <img src="img/skills/Spring.png" alt="Spring">
-                            <p class="small-text">Spring</p>
-                        </div>
-                    </div>
-                    <div class="about-item" style="height:85px">
-                        <div class="abt-text">
-                            <img src="img/skills/docker.png" alt="Docker">
-                            <p class="small-text" style="padding-top: 0.7rem">Docker</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <h4 class="stat-title">My Timeline</h4>
             <div class="timeline">
                 <div class="timeline-item">
                     <div class="tl-icon">
@@ -149,13 +45,11 @@
                     <p class="tl-duration">Jul 2024 - Present</p>
                     <h5>Business Intelligence Engineer Intern<span> - Amazon</span></h5>
                     <p>
-                        Developed automated data pipelines for the Finance team using ETL tools, enabling improved decision-making.
+                        • Developed automated data pipelines for the Finance team using ETL tools, enabling improved decision-making.
                         <br>
+                        • Achieved 20% reduction in query execution times by optimizing crucial SQL queries for faster data retrieval.
                         <br>
-                        Achieved 20% reduction in query execution times by optimizing crucial SQL queries for faster data retrieval.
-                        <br>
-                        <br>
-                        Automated financial dashboards and reports in Quicksight and Excel, reducing manual reporting time by 50%.
+                        • Automated financial dashboards and reports in Quicksight and Excel, reducing manual reporting time by 50%.
                     </p>
                 </div>
                 <div class="timeline-item">
@@ -165,10 +59,9 @@
                     <p class="tl-duration">Oct 2023 - Jun 2024</p>
                     <h5>Undergraduate Assistant<span> - Sabanci University</span></h5>
                     <p>
-                        Assisted over 1000 students in IF100 & CS201 courses by holding office hours for assignments in Python/C++.
+                        • Assisted over 1000 students in IF100 & CS201 courses by holding office hours for assignments in Python/C++.
                         <br>
-                        <br>
-                        Led two-hour weekly recitation sessions on programming fundamentals.
+                        • Led two-hour weekly recitation sessions on programming fundamentals.
                     </p>
                 </div>
                 <div class="timeline-item">
@@ -176,18 +69,16 @@
                         <i class="fas fa-briefcase" style="color: white"></i>
                     </div>
                     <p class="tl-duration">Oct 2023 - Jan 2024</p>
-                    <h5>Group Member<span> - Sabanci University Program for Undergraduate Research Project</span></h5>
+                    <h5>Research Assistant<span> - Sabanci University Undergraduate Research Project</span></h5>
                     <p>
                         Creating a Database for Turkish Election Trends
                         <br>
                         <br>
-                        Aiming to scrape the data that does not come in bulk to be processed, and convert it to a format that would be suitable for further trend analysis
+                        • Researched and scraped over 80 years of historical election data from Turkey, transforming it into a suitable format. 
                         <br>
+                        • Utilized Python libraries (Selenium, BeautifulSoup) for web scraping, extracting information from the official Turkish Electoral Board website. 
                         <br>
-                        Web scraping using Python libraries and utilizing Selenium to gather<br>information  from the official website of the Turkish Supreme Electoral Board
-                        <br>
-                        <br>
-                        Preliminary trend analysis and data visualisations of the past elections using Python, and Excel
+                        • Conducted preliminary trend analysis and created data visualizations of past Istanbul elections using Python and Excel.                        <br>
                     </p>
                 </div>
                 <div class="timeline-item">
@@ -197,10 +88,8 @@
                     <p class="tl-duration">Sep 2021 - Jan 2022</p>
                     <h5>Member<span> - Sabanci University Civic Involvement Projects</span></h5>
                     <p>
-                        Participating in civic involvement projects such as shore cleaning and animal shelter visits
-                        <br>
-                        <br>
-                        Raising awareness about volunteering activities among the students in university                     </p>
+                        • Participating in civic involvement projects such as shore cleaning and animal shelter visits, raising awareness about volunteering activities among the students in university.            
+                    </p>
                 </div>
             </div>
         </section>
@@ -211,12 +100,25 @@
             <div class="portfolios">
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/efe-ballar-high-resolution-logo.png" alt="Personal Website">
+                        <img src="img/LLM-Based-Course-Assistant.png" alt="LLM-Based-Course-Assistant">
                     </div>
                     <div class="hover-items">
-                        <h3>Personal Portfolio Website</h3>
+                        <h3>LLM-Based<br>Course Assistant</h3>
                         <div class="icons">
-                            <a href="https://github.com/EfeBallar/PortfolioWebPage" class="icon" target="_blank">
+                            <a href="https://github.com/EfeBallar/GraduationProject" class="icon" target="_blank">
+                                <i class="fab fa-github"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="img/Flight-roster-project.png" alt="Flight Roster Project">
+                    </div>
+                    <div class="hover-items">
+                        <h3>Flight Roster Project</h3>
+                        <div class="icons">
+                            <a href="https://github.com/EfeBallar/CS308-Project" class="icon" target="_blank">
                                 <i class="fab fa-github"></i>
                             </a>
                         </div>
@@ -248,19 +150,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="portfolio-item">
-                    <div class="image">
-                        <img src="img/hospital-database-management-system-high-resolution-logo.png" alt="DBMS">
-                    </div>
-                    <div class="hover-items">
-                        <h3>Hospital<br>Database Management<br>System</h3>
-                        <div class="icons">
-                            <a href="https://github.com/EfeBallar/CS306-DBMS" class="icon" target="_blank">
-                                <i class="fab fa-github"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
+                
                 <div class="portfolio-item">
                     <div class="image">
                         <img src="img/cs210.png" alt="Analyzing the Grand Assembly of Turkey">
@@ -269,6 +159,19 @@
                         <h3>Analyzing the History of <br> Grand Assembly of Turkey</h3>
                         <div class="icons">
                             <a href="https://github.com/EfeBallar/CS210-Project" class="icon" target="_blank">
+                                <i class="fab fa-github"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="img/efe-ballar-high-resolution-logo.png" alt="Personal Website">
+                    </div>
+                    <div class="hover-items">
+                        <h3>Personal Portfolio Website</h3>
+                        <div class="icons">
+                            <a href="https://github.com/EfeBallar/PortfolioWebPage" class="icon" target="_blank">
                                 <i class="fab fa-github"></i>
                             </a>
                         </div>
