modified image for cs308 project

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         <img src="img/LLM-Based-Course-Assistant.png" alt="LLM-Based-Course-Assistant">
                     </div>
                     <div class="hover-items">
-                        <h3>LLM-Based<br>Course Assistant</h3>
+                        <h3>LLM-Based Course Assistant</h3>
                         <div class="icons">
                             <a href="https://github.com/EfeBallar/GraduationProject" class="icon" target="_blank">
                                 <i class="fab fa-github"></i>
@@ -116,7 +116,7 @@
                         <img src="img/Flight-roster-project.png" alt="Flight Roster Project">
                     </div>
                     <div class="hover-items">
-                        <h3>Flight Roster Project</h3>
+                        <h3>Airline Manager</h3>
                         <div class="icons">
                             <a href="https://github.com/EfeBallar/CS308-Project" class="icon" target="_blank">
                                 <i class="fab fa-github"></i>
