--- a/index.html
+++ b/index.html
@@ -23,12 +23,20 @@
             <div class="right-header">
                 <h1 class="name">
                     Hi, I'm <span>Efe Ballar.</span><br>
-                    A Computer Science & Engineering Student<br>@ Sabanci University.
+                    Senior Computer Science & Engineering Student.
                 </h1>
                 <div class="btn-con">
                     <a href ="EfeBallarCV.pdf" class="main-btn" target="_blank">
                         <span class = "btn-text">Get my CV!</span>
                         <span class = "btn-icon"><i class="fas fa-download" style="color: white"></i></span>
+                    </a>
+                </div>
+                <div class="contact-icon">
+                    <a href="https://github.com/EfeBallar" target="_blank">
+                        <i class="fab fa-github"></i>
+                    </a>
+                    <a href="https://www.linkedin.com/in/efeballar" target="_blank">
+                        <i class="fab fa-linkedin-in"></i>
                     </a>
                 </div>
             </div>
@@ -179,6 +187,7 @@
                 </div>
             </div>
         </section>
+        <!--
         <section class="section sec4 contact" id="contact">
             <div class="contact-container">
                 <div class="main-title">
@@ -239,6 +248,7 @@
                 </div>
             </div>
         </section>
+    -->
     </main>
     <div class="controls">
         <div class="control control-1 active-btn" data-id="home" id="c1" >
@@ -250,9 +260,11 @@
         <div class="control control-3" data-id="portfolio" id="c3">
             <i class="fas fa-briefcase"></i>
         </div>
+        <!--
         <div class="control control-4" data-id="contact" id="c4">
             <i class="fas fa-envelope-open"></i>
         </div>
+    -->
     </div>
     <div class="theme-btn">
         <i class="fas fa-adjust"></i>
