Add .gitignore, update CV content, and modify portfolio section

--- a/index.html
+++ b/index.html
@@ -177,6 +177,19 @@
                         </div>
                     </div>
                 </div>
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="img/kayak-flight-scraper.png" alt="Kayak Flight Scraper">
+                    </div>
+                    <div class="hover-items">
+                        <h3>Kayak Flight Scraper</h3>
+                        <div class="icons">
+                            <a href="https://github.com/EfeBallar/kayak-flight-scraper" class="icon" target="_blank">
+                                <i class="fab fa-github"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
