Update header introduction and internship duration

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="right-header">
                 <h1 class="name">
                     Hi, I'm <span>Efe Ballar.</span><br>
-                    Senior Computer Science & Engineering Student.
+                    Computer Scientist, BSc.
                 </h1>
                 <div class="btn-con">
                     <a href ="EfeBallarCV.pdf" class="main-btn" target="_blank">
@@ -42,7 +42,7 @@
                     <div class="tl-icon">
                         <i class="fas fa-briefcase" style="color: white"></i>
                     </div>
-                    <p class="tl-duration">Jul 2024 - Present</p>
+                    <p class="tl-duration">Jul 2024 - Jul 2025</p>
                     <h5>Business Intelligence Engineer Intern<span> - Amazon</span></h5>
                     <p>
                         • Developed automated data pipelines for the Finance team using ETL tools, enabling improved decision-making.
