--- a/index.html
+++ b/index.html
@@ -42,14 +42,17 @@
                     <div class="tl-icon">
                         <i class="fas fa-briefcase" style="color: white"></i>
                     </div>
+                    <p class="tl-duration">Jul 2025 - Present</p>
+                    <h5>Cloud Engineer Intern<span> - Commencis</span></h5>
+                </div>
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-briefcase" style="color: white"></i>
+                    </div>
                     <p class="tl-duration">Jul 2024 - Jul 2025</p>
                     <h5>Business Intelligence Engineer Intern<span> - Amazon</span></h5>
                     <p>
-                        • Developed automated data pipelines for the Finance team using ETL tools, enabling improved decision-making.
-                        <br>
-                        • Achieved 20% reduction in query execution times by optimizing crucial SQL queries for faster data retrieval.
-                        <br>
-                        • Automated financial dashboards and reports in Quicksight and Excel, reducing manual reporting time by 50%.
+                        Developed automated data pipelines for Turkey Retail Finance team
                     </p>
                 </div>
                 <div class="timeline-item">
@@ -59,9 +62,7 @@
                     <p class="tl-duration">Oct 2023 - Jun 2024</p>
                     <h5>Undergraduate Assistant<span> - Sabanci University</span></h5>
                     <p>
-                        • Assisted over 1000 students in IF100 & CS201 courses by holding office hours for assignments in Python/C++.
-                        <br>
-                        • Led two-hour weekly recitation sessions on programming fundamentals.
+                        Introduction to Python & Introduction to C++
                     </p>
                 </div>
                 <div class="timeline-item">
@@ -72,13 +73,6 @@
                     <h5>Research Assistant<span> - Sabanci University Undergraduate Research Project</span></h5>
                     <p>
                         Creating a Database for Turkish Election Trends
-                        <br>
-                        <br>
-                        • Researched and scraped over 80 years of historical election data from Turkey, transforming it into a suitable format. 
-                        <br>
-                        • Utilized Python libraries (Selenium, BeautifulSoup) for web scraping, extracting information from the official Turkish Electoral Board website. 
-                        <br>
-                        • Conducted preliminary trend analysis and created data visualizations of past Istanbul elections using Python and Excel.                        <br>
                     </p>
                 </div>
             </div>
