Update research assistant position description in timeline

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <i class="fas fa-briefcase" style="color: white"></i>
                     </div>
                     <p class="tl-duration">Oct 2023 - Jan 2024</p>
-                    <h5>Research Assistant<span> - Sabanci University Undergraduate Research Project</span></h5>
+                    <h5>Research Assistant<span> - Sabanci University</span></h5>
                     <p>
                         Creating a Database for Turkish Election Trends
                     </p>
