Update education section:  add specialization detail

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                             <div class="education-item">
                                 <h4>MEng, Computer Science</h4>
                                 <p class="education-school">KU Leuven</p>
+                                <p class="education-details education-specialization">Specialization: Artificial Intelligence</p>
                                 <span class="education-period">2025 - Present</span>
                             </div>
                             
