added "Where I've Been"

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#projects">Projects</a></li>
+                <li><a href="travels" target="_blank">Where I've Been</a></li>
             </ul>
         </nav>
 
@@ -36,14 +37,6 @@
                 <h2 class="section-title">About Me</h2>
                 <div class="about-content">
                     <div class="about-photo">
-                        <!--
-                        <div class="resume-button-container">
-                            <a href="EfeBallar_CV.pdf" class="btn btn-primary resume-btn" target="_blank">
-                                <i class="fas fa-download"></i>
-                                My Resume
-                            </a>
-                        </div>
-                        -->
                         <img src="img/efeBallar.jpg" alt="Efe" class="profile-image">
                         <div class="fun-facts">
                             <div class="fun-fact active">
@@ -183,10 +176,6 @@
                                 <span>React</span>
                             </div>
                             <div class="skill-item">
-                                <i class="fas fa-network-wired"></i>
-                                <span>FASTAPI</span>
-                            </div>
-                            <div class="skill-item">
                                 <i class="fas fa-table"></i>
                                 <span>Pandas</span>
                             </div>
@@ -201,14 +190,6 @@
                             <div class="skill-item">
                                 <i class="fas fa-brain"></i>
                                 <span>Scikit-learn</span>
-                            </div>
-                            <div class="skill-item">
-                                <i class="fas fa-gear"></i>
-                                <span>Tensorflow</span>
-                            </div>
-                            <div class="skill-item">
-                                <i class="fas fa-link"></i>
-                                <span>Langchain</span>
                             </div>
                         </div>
                     </div>
