Updated HTML/CSS structures

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="travels" target="_blank">Where I've Been</a></li>
+                <li><a href="travels" target="_blank" style="text-decoration: underline;">Where I've Been</a></li>
             </ul>
         </nav>
 
@@ -47,6 +47,18 @@
                                 <i class="fas fa-music"></i>
                                 <span>Drums</span>
                             </div>
+                            <div class="fun-fact">
+                                <i class="fas fa-camera"></i>
+                                <span>Photography</span>
+                            </div>
+                            <div class="fun-fact">
+                                <i class="fas fa-basketball-ball"></i>
+                                <span>Basketball</span>
+                            </div>
+                            <div class="fun-fact">
+                                <i class="fas fa-soccer-ball"></i>
+                                <span>Football</span>
+                            </div>                          
                             <div class="fun-fact">
                                 <i class="fas fa-bicycle"></i>
                                 <span>Cycling</span>
@@ -139,24 +151,12 @@
                                 <span>C/C++</span>
                             </div>
                             <div class="skill-item">
-                                <i class="fab fa-microsoft"></i>
-                                <span>C#</span>
-                            </div>
-                            <div class="skill-item">
                                 <i class="fas fa-database"></i>
                                 <span>SQL</span>
                             </div> 
                             <div class="skill-item">
-                                <i class="fab fa-r-project"></i>
-                                <span>R</span>
-                            </div> 
-                            <div class="skill-item">
                                 <i class="fab fa-html5"></i>
-                                <span>HTML</span>
-                            </div>
-                            <div class="skill-item">
-                                <i class="fab fa-css3-alt"></i>
-                                <span>CSS</span>
+                                <span>HTML/CSS</span>
                             </div>
                             <div class="skill-item">
                                 <i class="fab fa-js-square"></i>
@@ -176,6 +176,10 @@
                                 <span>React</span>
                             </div>
                             <div class="skill-item">
+                                <i class="fas fa-server"></i>
+                                <span>SpringBoot</span>
+                            </div>
+                            <div class="skill-item">
                                 <i class="fas fa-table"></i>
                                 <span>Pandas</span>
                             </div>
@@ -186,10 +190,6 @@
                             <div class="skill-item">
                                 <i class="fas fa-robot"></i>
                                 <span>Selenium</span>
-                            </div>
-                            <div class="skill-item">
-                                <i class="fas fa-brain"></i>
-                                <span>Scikit-learn</span>
                             </div>
                         </div>
                     </div>
