Added Maastricht to travel

--- a/travels/index.html
+++ b/travels/index.html
@@ -259,7 +259,7 @@
             { name: "Amsterdam", emoji: "🇳🇱", coordinates: [4.9041, 52.3676]},
             { name: "Rotterdam", emoji: "🇳🇱", coordinates: [4.47775, 51.9244424]},
             { name: "The Hague", emoji: "🇳🇱", coordinates: [4.3113461, 52.0799838]},
-            
+            { name: "Maastricht", emoji: "🇳🇱", coordinates: [5.6909768,50.8512438]},
             // North Macedonia
             { name: "Skopje", emoji: "🇲🇰", coordinates: [21.4316,41.9981]},
             { name: "Ohrid", emoji: "🇲🇰", coordinates: [20.8015,41.1232]},
