--- a/index.html
+++ b/index.html
@@ -48,20 +48,8 @@
                                 <span>Drums</span>
                             </div>
                             <div class="fun-fact">
-                                <i class="fas fa-camera"></i>
-                                <span>Photography</span>
-                            </div>
-                            <div class="fun-fact">
                                 <i class="fas fa-basketball-ball"></i>
                                 <span>Basketball</span>
-                            </div>
-                            <div class="fun-fact">
-                                <i class="fas fa-soccer-ball"></i>
-                                <span>Football</span>
-                            </div>                          
-                            <div class="fun-fact">
-                                <i class="fas fa-bicycle"></i>
-                                <span>Cycling</span>
                             </div>
                         </div>
                         <!-- Education Section -->
@@ -87,31 +75,33 @@
                     <div class="about-text">
                         <p>I'm a hard-working engineer who loves the challenge of solving complex problems.</p>
                         <div class="timeline">
+                             <div class="timeline-item" data-year="2026">
+                                <div class="timeline-content">
+                                    <h4>Software Engineer Intern @ Panenco</h4>
+                                </div>
+                            </div>
                             <div class="timeline-item" data-year="2025">
                                 <div class="timeline-content">
                                     <h4>Cloud Engineer Intern @ Commencis</h4>
                                     
-                                    <p>Implemented and deployed scalable Python and Go microservices on AWS infrastructure, streamlining data 
-                                        processing workflows and decreasing API response times for data operations.</p>
+                                    <p>Implemented and deployed Python and Go microservices on AWS infrastructure.</p>
                                 </div>
                             </div>
                             <div class="timeline-item" data-year="2024">
                                 <div class="timeline-content">
                                     <h4>Business Intelligence Engineer Intern @ Amazon</h4>
-                                    <p>Engineered automated data pipelines utilizing ETL tools, and enhanced decision-making efficiency across the
-                                        Finance team by optimizing crucial SQL queries in Redshift clusters. 
+                                    <p>Automated Finance data pipelines utilizing ETL tools.
                                         <br>
+                                        Optimized SQL queries in Redshift clusters. 
                                         <br>
-                                        Designed and deployed dynamic financial dashboards and reporting systems in Quicksight and Excel, decreasing
-                                        manual report generation times and enabling real-time insights for strategic planning. 
+                                        Deployed financial dashboards and reporting systems in Quicksight and Excel. 
                                     </p>
                                 </div>
                             </div>
                             <div class="timeline-item" data-year="2023">
                                 <div class="timeline-content">
                                     <h4>Undergraduate Assistant @ Sabancı University</h4>
-                                    <p>Facilitated student recitations and office hours while developing supplementary materials, supporting academic 
-                                        success for over 1000 students and driving an improvement in assignment grades in both Python and C++ courses.</p>
+                                    <p>Facilitated recitations and office hours for students in Python and C++ courses.</p>
                                 </div>
                             </div>
                         </div>
