--- a/travels/index.html
+++ b/travels/index.html
@@ -226,6 +226,7 @@
             { name: "Leuven", emoji: "🇧🇪", coordinates: [4.7005, 50.8798], important: true, info: "Master's years (2025-Present)" },
             { name: "Antwerp", emoji: "🇧🇪", coordinates: [4.3997081, 51.2211097]},
             { name: "Brugge", emoji: "🇧🇪", coordinates: [3.226772,51.2085526]},
+            { name: "Ghent", emoji: "🇧🇪", coordinates: [3.7304, 51.0500]},
             
             // Bulgaria
             { name: "Sofia", emoji: "🇧🇬", coordinates: [23.3219,42.6977]},
